--- a/PM-Movies/package.json
+++ b/PM-Movies/package.json
@@ -21,6 +21,7 @@
     "ajv": "^6.10.0",
     "core-js": "^2.6.5",
     "rxjs": "^6.4.0",
+    "tsc": "^1.20150623.0",
     "tslib": "^1.9.0",
     "zone.js": "^0.8.29"
   },
