feat(code): set up default SSR for the app
No application shell for now, whole app is rendered

--- a/PM-Movies/package.json
+++ b/PM-Movies/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^7.1.4",
     "@angular/platform-browser-dynamic": "^7.1.4",
     "@angular/router": "^7.1.4",
+    "@types/express": "^4.16.1",
     "ajv": "^6.10.0",
     "core-js": "^2.6.5",
     "rxjs": "^6.4.0",
@@ -30,7 +31,9 @@
     "@angular/cli": "^7.1.4",
     "@angular/compiler-cli": "^7.1.4",
     "@angular/core": "^7.2.14",
+    "@angular/http": "^7.2.14",
     "@angular/language-service": "^7.1.4",
+    "@angular/platform-server": "^7.2.14",
     "@pm/spectator": "^1.0.0",
     "@types/jasmine": "^2.8.16",
     "@types/jasminewd2": "~2.0.3",
@@ -43,12 +46,13 @@
     "karma-coverage-istanbul-reporter": "^2.0.5",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "ngx": "^2.4.0",
     "protractor": "^5.4.2",
     "rxjs-compat": "^6.4.0",
     "stylelint": "^9.10.1",
     "stylelint-config-standard": "^18.2.0",
     "stylelint-order": "^2.1.0",
-    "ts-node": "~7.0.0",
+    "ts-node": "^8.1.0",
     "tslint": "~5.11.0",
     "typescript": "~3.1.6"
   }
